--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -408,6 +408,23 @@ en:
         cmp_support_aria_label: Email us for support with this service
         cmp_support_email_html: This service is currently restricted. Please contact %{link} at CCS if you have not received credentials.
         heading: CCS Marketplace private beta
+    home:
+      index:
+        before_you_start:
+          heading: Before you start
+          use_this_service:
+            heading: 'To use this service, you need to:'
+            item_1: know the location where the work will be carried out
+            item_2_html: review the %{ojeu_contract_link} and framework specification to ensure your requirements are within the scope of this agreement
+            item_3_html: 'know the lot (or lots) the consultancy services belong to - see the documents ''Lot descriptions MCF2 RM6008'' and ''RM3745 MCF Lot desfriptions'' listed on the following agreements: %{mcf_link} and %{mcf2_link}'
+        heading: Find management consultants
+        mcf2_link_text: Management Consultancy Framework Two
+        mcf_link_text: Management Consultancy Framework
+        ojeu_contract_link_text: OJEU contract notice
+        use_this_service:
+          heading: 'Use this service to:'
+          item_1: produce a list of Crown Commercial Service approved management consultants based on your requirements
+          item_2: adhere to the public procurement procedures
     journey:
       choose_expenses:
         answer_expenses_not_paid: We will not pay expenses
