--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -116,14 +116,13 @@ en:
   apprenticeships:
     home:
       download_provider:
-        audit_text: For audit purposes, please find below the list of choices and requiements that you have entered to generate this shortlist. Print this page, to keep a copy of this for your records.
         button_label: Start new search
-        download_training_provider_list_link: Download training provider list
+        download_training_provider_list_link: Download supplier shortlist
         lead_text: You can now download the training provider list and complete this procurement offline via a further competition
         page_title: Download the training provider list
         print_this_page: Print this page
-        selections_used_title: Selections used to generate your shortlist
         the_following_documents_text: The following documents may also be of help
+        the_spreadsheet_text: The spreadsheet includes the selections you made, for your records and audit trail.
         title: Download the training provider list
         warning_text: Please be aware that appointed suppliers are constantly changing. Therefore please download this list of providers and use it immediately. Any list providers older than 2 working days will be considered to have expired.
         warning_title: Warning
