--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -801,9 +801,7 @@ en:
         page_title: Neutral vendor managed service providers
   views:
     pagination:
-      first: ''
-      last: ''
-      next: 'Next <b>→</b>'
-      previous: '<b>←</b> Previous'
+      next: Next <b>→</b>
+      previous: "<b>←</b> Previous"
       truncate: "..."
   'yes': 'Yes'
