Moved file upload scripts to rails app. Also added an admin site where the CT team can upload data files
Removed tmp files

Added the upload folder to gitignore and uncommented the methods that runs the script

Script now runs on validate

Validation now works

Added approved action

Added aasm state machine

Cleaned up views and approve/reject methods

Added logic to revert changes on reject, cancel or when upload creation fails

Added some styling for new upload page

Uploads index page now has an accordion to show the list of upload sessions

Added date when upload session was created

Added file type and size validation

Added redis and sidekiq. Sidekiq log can only be accessed if user is logged in

Added failed_reason to admin uploads and set up rake task in a background process

Moved database update in a background process

Added tests for upload model

Updated scpecs

Added limit to migration and fixed anonymize.rb

Rubocop fixes

Uploader cleanup

Rubocop fixes

Removed uneeded model

Fixed merge conflict and tests

Excluded input and output folders from gitignore

Removed error.out files

Gitignore fix

Matched schema with master

Gitignore fix

Added cache attr accessors to permit params

Removed hardocded supplier names

Removed geocoder-cache

Gitignore update

Removed neutral vendor supplier details from script

Index page now matches designs

New screen now matches designs

Added show page with new designs

Govuk-frontend update and setup in_preview and uploading paths

FM bug fixing on long list page

Switched to version 2.4 of postgis

Added pagination and fixed tests

Added error messages on the show page

Small fixes

Removed errors.out file

Added the a .gitignore file in the input and output folders so the folders are checked into github

Revert "Feature/st 69 admin tool"

Moved file upload scripts to rails app. Also added an admin site where the CT team can upload data files

Removed tmp files

Added the upload folder to gitignore and uncomment

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -628,6 +628,45 @@ en:
       one: agency
       other: agencies
   supply_teachers:
+    admin:
+      uploads:
+        in_progress:
+          content: The spreadsheets have been uploaded and are now processing.
+          heading: Upload successful
+        index:
+          caption: Manage supplier data
+          create_new: Create a new data upload
+          date: Date
+          heading: Agency Supply teachers and agency workers
+          name: Name
+          no_of_files: Number of files
+          status: Status
+          table_caption: Previous uploads
+        new:
+          caption: Agency supply teachers and agency workers
+          heading: New data upload
+          upload_caption: Supported file formats are XLS, XLSX and CSV. Maximum file size is 5mb.
+          upload_title: Upload one or more of the following spreadsheets
+          warning_text: You currently have an upload session in review or in progress. Starting a new data upload will cancel this.
+        show:
+          caption: Agency supply teachers and agency workers
+          confirm_changes: 'Confirm these files are ready to be used by the live service:'
+          current_accredited_suppliers: Current accredited suppliers
+          datetime: 'Date/time:'
+          download: Download
+          files: Files
+          geographical_data_all_suppliers: Geographical data all suppliers
+          heading: 'Upload session #%{number}'
+          lot_1_and_lot_2_comparisons: Lot 1 and Lot 2 comparisons
+          master_vendor_contacts: Master vendor contacts
+          neutral_vendor_contacts: Neutral vendor contacts
+          pricing_for_tool: Pricing for tool
+          spreadsheet: Spreadsheet
+          status: 'Status:'
+          supplier_lookup: Supplier lookup
+        uploading:
+          content_html: 'The data from <strong>''Upload session #%{session_no}''</strong> is currently in progress to be published to the <strong>''Agency supply teachers and agency workers''</strong> service.'
+          heading: Data upload in progress
     branches:
       branch:
         address: Address
