--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -804,7 +804,7 @@ en:
           further_competition_html: run a further competition to select an agency - there is <a href="%{advice_url}">advice from CCS</a> on how to do this -
           header: What to do next
           more_help: Contact supplyteachers@crowncommercial.gov.uk if you need more help running a further competition.
-          sign_form_html: select an agency and <a href="%{form_url}">sign the full version order form</a> listed in the documents section of the CCS framework as ‘RM3826 Supply Teachers - Order Form Template (Full Version) V1.docx’
+          sign_form_html: select an agency and <a href="%{form_url}">sign the full version order form</a> listed in the documents section of the <a href="%{framework_url}">CCS framework</a> as ‘RM3826 Order form template full version v1.docx’
         header: Master vendor managed service providers
         page_title: Master vendor managed service providers
       neutral_vendors:
@@ -812,7 +812,7 @@ en:
         do_next:
           contact_supplier: contact the agency for this worker and for all your future temporary recruitment needs
           header: What to do next
-          sign_form_html: sign the <a href="%{form_url}">full version order form</a> (also available in the documents section of the <a href="%{framework_url}">CCS framework</a> as ‘RM3826 Supply Teachers - Order Form Template (Full Version).docx’)
+          sign_form_html: sign the <a href="%{form_url}">full version order form</a> (also available in the documents section of the <a href="%{framework_url}">CCS framework</a> as ‘RM3826 Order form template full version v1.docx’)
         header: Neutral vendor managed service providers
         mark_up_explanation_html: The mark-up varies for all other workers. Contact the agency to find out the mark-up rate for the type of worker you need.
         mark_up_html: A %{mark_up} mark-up is charged if you use the agency to hire a specific person for you (a ‘nominated worker’).
