--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -682,11 +682,14 @@ en:
     gateway:
       index:
         dfe_signin:
-          create_account_html: If your school is on the <a href="%{gias_url}" aria-label="Get Information About Schools register">Get Information About Schools (GIAS) register</a> you should be able to get a DfE Sign-in account. Find information on how the approver for your organisation can <a href="%{dfe_sign_in_url}" aria-label="DfE Sign In contact form">create an account for you</a>.
+          create_account_html: If your school is on the <a href="%{gias_url}" aria-label="Get Information About Schools register">Get Information About Schools (GIAS) register</a> you should be able to get a DfE Sign-in account.
           instructions: Sign in to your DfE Sign-In account to use this service. You will be automatically directed back to this service once you’ve signed in.
+          find_more_info_html: Find more information about the <a href="%{terms_url}">terms and conditions of the DfE Sign-in account</a>.
           not_for_profit_html: Only not-for-profit and schools with charitable status are able to get access to the online and offline version of the service.
           outside_england_html: Outside of England, not-for-profit and schools with charitable status cannot yet use the online agency selection service. They can <a href="%{url}" aria-label="Crown Commercial Service contact form">request access to an offline version</a> (an Excel spreadsheet) by putting 'offline agency selection tool’ in the comments box.
-        heading: CCS Marketplace private beta
+          create_dfe_signin_link: Create a DfE Sign-in account
+        heading: CCS Marketplace - Find supply teachers and agency workers
+        subheading: Not got a Sign-in account?
     home:
       fta_to_perm_fee:
         avoid_fee: To avoid this fee you can hire the worker permanently 6 months after current contract with you ends.
