Added show page with new designs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -652,6 +652,9 @@ en:
           warning_text: You currently have an upload session in review or in progress. Starting a new data upload will cancel this.
           upload_title: Upload one or more of the following spreadsheets
           upload_caption: Supported file formats are XLS, XLSX and CSV. Maximum file size is 5mb.
+        show:
+          caption: Agency supply teachers and agency workers
+          heading: 'Upload session #%{number}'
     branches:
       branch:
         address: Address
