--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -320,6 +320,7 @@ en:
     apply_filters: Apply filters
     back_to_start: Back to start
     browse: Browse
+    ccs_contact_support_url: https://www.ccs.gov.uk/support
     continue: Continue
     csv_html: <abbr title="Comma-separated values">CSV</abbr>
     doc_html: <abbr title="Microsoft Word">DOC</abbr>
@@ -462,6 +463,11 @@ en:
         page_title: Supplier results
         results_html: <strong class="govuk-!-font-size-27">%{results}</strong> <strong>firms</strong> can provide the legal services that meet your requirements.
         sme: SME
+      no_suppliers_found:
+        heading: No suppliers were found
+        link_click_text: Contact CCS Support
+        link_end_text: for help.
+        statement: No companies can provide suppliers that can meet your requirements.
       show:
         caption: Supplier details
         heading: Supplier details
